Backend/k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: clinic-api-service
  namespace: clinic
spec:
  selector:
    app: clinic-api

  ports:
    - port: 80
      targetPort: 8080

  type: ClusterIP
