Backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clinic-ingress
  namespace: clinic
spec:
  ingressClassName: nginx

  rules:
  - host: clinic.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: clinic-api-service
            port:
              number: 80
